[gd_scene load_steps=32 format=2]

[ext_resource path="res://Sprites/TitleScreen/background.png" type="Texture" id=1]
[ext_resource path="res://Sprites/TitleScreen/StartGame.png" type="Texture" id=2]
[ext_resource path="res://Sprites/TitleScreen/Exit.png" type="Texture" id=3]
[ext_resource path="res://Sprites/TitleScreen/select.png" type="Texture" id=4]
[ext_resource path="res://Scripts/TitleScreen.gd" type="Script" id=5]
[ext_resource path="res://Fonts/BungeeInline-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Scenes/FadeIn.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sounds/menu_soundtrack_by_cactusdude.wav" type="AudioStream" id=8]
[ext_resource path="res://Sprites/TitleScreen/Levels.png" type="Texture" id=9]
[ext_resource path="res://Sprites/TitleScreen/inapoi.png" type="Texture" id=10]
[ext_resource path="res://Sprites/TitleScreen/Level1.png" type="Texture" id=11]
[ext_resource path="res://Sprites/TitleScreen/Level6.png" type="Texture" id=12]
[ext_resource path="res://Sprites/TitleScreen/Level4.png" type="Texture" id=13]
[ext_resource path="res://Sprites/TitleScreen/Level7.png" type="Texture" id=14]
[ext_resource path="res://Sprites/TitleScreen/Level8.png" type="Texture" id=15]
[ext_resource path="res://Sprites/TitleScreen/Level5.png" type="Texture" id=16]
[ext_resource path="res://Sprites/TitleScreen/Level3.png" type="Texture" id=17]
[ext_resource path="res://Sprites/TitleScreen/Level2.png" type="Texture" id=18]
[ext_resource path="res://Sounds/zapsplat_multimedia_button_click_007_53868 (online-audio-converter.com).wav" type="AudioStream" id=19]
[ext_resource path="res://Sprites/TitleScreen/Credits.png" type="Texture" id=20]
[ext_resource path="res://Fonts/Cormorant-Light.ttf" type="DynamicFontData" id=21]
[ext_resource path="res://Fonts/Cormorant-Regular.ttf" type="DynamicFontData" id=22]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_top = 5
extra_spacing_bottom = 5
extra_spacing_char = 1
extra_spacing_space = 2
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 22 )

[sub_resource type="Animation" id=3]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/VBoxContainer/VBoxContainer/Credits:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer/VBoxContainer/VBoxContainer/Credits:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 31, 34 ), Vector2( 0, 34 ) ]
}

[sub_resource type="Animation" id=4]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/VBoxContainer/VBoxContainer/Exit:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer/VBoxContainer/VBoxContainer/Exit:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 31, 51 ), Vector2( 0, 51 ) ]
}

[sub_resource type="Animation" id=5]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/VBoxContainer/VBoxContainer/Levels:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer/VBoxContainer/VBoxContainer/Levels:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 32, 17 ), Vector2( 0, 17 ) ]
}

[sub_resource type="Animation" id=6]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/VBoxContainer/VBoxContainer/StartGame:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer/VBoxContainer/VBoxContainer/StartGame:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 32, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 30.0
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 30 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 180 ), Vector2( 0, -850 ) ]
}

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 21 )

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 5 )

[node name="MainMenu" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="MainMenu"]
scale = Vector2( 0.166776, 0.166724 )
texture = ExtResource( 1 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 320.0
margin_bottom = 180.0
custom_constants/margin_right = 0
custom_constants/margin_top = 20
custom_constants/margin_left = 0
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer"]
margin_left = 80.0
margin_top = 20.0
margin_right = 239.0
margin_bottom = 160.0
size_flags_horizontal = 4
custom_constants/separation = 0

[node name="TextureRect" type="Label" parent="MainMenu/MarginContainer/VBoxContainer"]
margin_right = 159.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.952941, 0.690196, 0.0980392, 1 )
text = "În căutarea
Libertății"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 159.0
margin_bottom = 78.0
size_flags_horizontal = 5

[node name="StartGame" type="TextureButton" parent="MainMenu/MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 159.0
margin_bottom = 13.0
texture_normal = ExtResource( 2 )
texture_focused = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="TouchScreenButton" parent="MainMenu/MarginContainer/VBoxContainer/VBoxContainer/StartGame"]
normal = ExtResource( 2 )

[node name="Levels" type="TextureButton" parent="MainMenu/MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
margin_top = 17.0
margin_right = 129.0
margin_bottom = 30.0
texture_normal = ExtResource( 9 )
texture_focused = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelsT" type="TouchScreenButton" parent="MainMenu/MarginContainer/VBoxContainer/VBoxContainer/Levels"]

[node name="Credits" type="TextureButton" parent="MainMenu/MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
margin_left = 31.0
margin_top = 34.0
margin_right = 160.0
margin_bottom = 47.0
rect_scale = Vector2( 1e-05, 1e-05 )
texture_normal = ExtResource( 20 )
texture_focused = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsT" type="TouchScreenButton" parent="MainMenu/MarginContainer/VBoxContainer/VBoxContainer/Credits"]

[node name="Exit" type="TextureButton" parent="MainMenu/MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
modulate = Color( 0.776471, 0.776471, 0.776471, 1 )
margin_top = 51.0
margin_right = 129.0
margin_bottom = 64.0
rect_clip_content = true
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 4 )

[node name="ExitT" type="TouchScreenButton" parent="MainMenu/MarginContainer/VBoxContainer/VBoxContainer/Exit"]
modulate = Color( 1, 0, 0, 1 )
normal = ExtResource( 3 )

[node name="Label" type="Label" parent="MainMenu"]
margin_top = 160.0
margin_right = 317.0
margin_bottom = 180.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0.678431, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.921569, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Versiune 1.0                    Blaze Gaming Studio 2021"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundMusic1" type="AudioStreamPlayer" parent="MainMenu"]
stream = ExtResource( 8 )
volume_db = -10.0
autoplay = true

[node name="Click" type="AudioStreamPlayer" parent="MainMenu"]
stream = ExtResource( 19 )

[node name="Timer" type="Timer" parent="MainMenu"]
wait_time = 0.5
one_shot = true

[node name="AnimationPlayerMainMenu" type="AnimationPlayer" parent="MainMenu"]
anims/Credits = SubResource( 3 )
anims/Exit = SubResource( 4 )
anims/Levels = SubResource( 5 )
anims/StartGame = SubResource( 6 )
anims/fade_out = SubResource( 7 )

[node name="FadeIn" parent="MainMenu" instance=ExtResource( 7 )]
visible = false
margin_left = -23.0
margin_top = -17.0
margin_right = 334.0
margin_bottom = 193.0

[node name="AnimTime" type="Timer" parent="MainMenu"]

[node name="Levels" type="Node2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="Levels"]
scale = Vector2( 0.167, 0.167 )
texture = ExtResource( 1 )
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="Levels"]
margin_right = 324.0
margin_bottom = 180.0
rect_min_size = Vector2( 320, 180 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Levels/VBoxContainer"]
margin_right = 324.0
margin_bottom = 160.0

[node name="LeftSide" type="VBoxContainer" parent="Levels/VBoxContainer/HBoxContainer"]
margin_right = 160.0
margin_bottom = 160.0
rect_min_size = Vector2( 160, 160 )

[node name="Level1" type="TextureButton" parent="Levels/VBoxContainer/HBoxContainer/LeftSide"]
margin_right = 160.0
margin_bottom = 37.0
texture_normal = ExtResource( 11 )
texture_focused = ExtResource( 4 )

[node name="Level2" type="TextureButton" parent="Levels/VBoxContainer/HBoxContainer/LeftSide"]
margin_top = 41.0
margin_right = 160.0
margin_bottom = 78.0
texture_normal = ExtResource( 18 )
texture_focused = ExtResource( 4 )

[node name="Level3" type="TextureButton" parent="Levels/VBoxContainer/HBoxContainer/LeftSide"]
margin_top = 82.0
margin_right = 160.0
margin_bottom = 119.0
texture_normal = ExtResource( 17 )
texture_focused = ExtResource( 4 )

[node name="Level4" type="TextureButton" parent="Levels/VBoxContainer/HBoxContainer/LeftSide"]
margin_top = 123.0
margin_right = 160.0
margin_bottom = 160.0
texture_normal = ExtResource( 13 )
texture_focused = ExtResource( 4 )

[node name="RightSide" type="VBoxContainer" parent="Levels/VBoxContainer/HBoxContainer"]
margin_left = 164.0
margin_right = 324.0
margin_bottom = 160.0
rect_min_size = Vector2( 160, 160 )

[node name="Level5" type="TextureButton" parent="Levels/VBoxContainer/HBoxContainer/RightSide"]
margin_right = 160.0
margin_bottom = 37.0
texture_normal = ExtResource( 16 )
texture_focused = ExtResource( 4 )

[node name="Level6" type="TextureButton" parent="Levels/VBoxContainer/HBoxContainer/RightSide"]
margin_top = 41.0
margin_right = 160.0
margin_bottom = 78.0
texture_normal = ExtResource( 12 )
texture_focused = ExtResource( 4 )

[node name="Level7" type="TextureButton" parent="Levels/VBoxContainer/HBoxContainer/RightSide"]
margin_top = 82.0
margin_right = 160.0
margin_bottom = 119.0
texture_normal = ExtResource( 14 )
texture_focused = ExtResource( 4 )

[node name="Level8" type="TextureButton" parent="Levels/VBoxContainer/HBoxContainer/RightSide"]
margin_top = 123.0
margin_right = 160.0
margin_bottom = 160.0
texture_normal = ExtResource( 15 )
texture_focused = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="Levels/VBoxContainer"]
margin_top = 164.0
margin_right = 324.0
margin_bottom = 171.0
rect_min_size = Vector2( 60, 0 )

[node name="back" type="TextureButton" parent="Levels/VBoxContainer/VBoxContainer"]
margin_right = 324.0
margin_bottom = 7.0
texture_normal = ExtResource( 10 )
texture_focused = ExtResource( 4 )

[node name="Credits" type="Node2D" parent="."]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Credits"]
anims/Scroll = SubResource( 8 )

[node name="Sprite" type="Sprite" parent="Credits"]
position = Vector2( 159.681, 90.191 )
scale = Vector2( 0.167, 0.167 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="Credits"]
margin_top = -850.0
margin_right = 320.0
margin_bottom = -1.99969
custom_fonts/font = SubResource( 9 )
text = "Joc realizat de:
Blaze Gaming Studio

Fondator Blaze Gaming Studio
David Simonel-Olimpiu

Programatori:
Haranguș Robert-Adrian
David Simonel-Olimpiu

Design preluat de la
itch.ro
craftpix.net

Design realizat de
David Simonel-Olimpiu
Haranguș Robert-Adrian

Efecte Sonore preluate de la 
mixkit.co
freesound.org

Surse informaționale
\"Despre Libertate\" de J.S.Mill

Level design realizat de
David Simonel-Olimpiu


Game Engine
Godot





Blaze Gaming Studio 2021"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/VBoxContainer/StartGame" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/VBoxContainer/StartGame/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/VBoxContainer/Levels" to="." method="_on_Levels_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/VBoxContainer/Levels/LevelsT" to="." method="_on_LevelsT_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/VBoxContainer/Credits/CreditsT" to="." method="_on_CreditsT_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/VBoxContainer/Exit/ExitT" to="." method="_on_ExitT_pressed"]
[connection signal="timeout" from="MainMenu/Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="MainMenu/AnimationPlayerMainMenu" to="." method="_on_AnimationPlayerMainMenu_animation_finished"]
[connection signal="animation_started" from="MainMenu/AnimationPlayerMainMenu" to="." method="_on_AnimationPlayerMainMenu_animation_started"]
[connection signal="pressed" from="Levels/VBoxContainer/HBoxContainer/LeftSide/Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="Levels/VBoxContainer/HBoxContainer/LeftSide/Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="Levels/VBoxContainer/HBoxContainer/LeftSide/Level3" to="." method="_on_Level3_pressed"]
[connection signal="pressed" from="Levels/VBoxContainer/HBoxContainer/LeftSide/Level4" to="." method="_on_Level4_pressed"]
[connection signal="pressed" from="Levels/VBoxContainer/HBoxContainer/RightSide/Level5" to="." method="_on_Level5_pressed"]
[connection signal="pressed" from="Levels/VBoxContainer/HBoxContainer/RightSide/Level6" to="." method="_on_Level6_pressed"]
[connection signal="pressed" from="Levels/VBoxContainer/HBoxContainer/RightSide/Level7" to="." method="_on_Level7_pressed"]
[connection signal="pressed" from="Levels/VBoxContainer/HBoxContainer/RightSide/Level8" to="." method="_on_Level8_pressed"]
[connection signal="pressed" from="Levels/VBoxContainer/VBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="animation_finished" from="Credits/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
